--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,11 @@ services:
 
   fruit_machine:
     build: .
+    command: >
+      sh -c "python manage.py wait_for_db &&
+             python manage.py migrate --noinput &&
+             python manage.py migrate --noinput &&
+             gunicorn core.wsgi:application --bind 0.0.0.0:8100
     volumes:
       - '.:/code'
       - static_volume:/code/staticfiles
