--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.7'
+version: '3'
 
 services:
   db:
@@ -16,7 +16,7 @@ services:
       sh -c "python manage.py wait_for_db &&
              python manage.py migrate --noinput &&
              python manage.py migrate --noinput &&
-             gunicorn core.wsgi:application --bind 0.0.0.0:8100
+             gunicorn core.wsgi:application --bind 0.0.0.0:8100"
     volumes:
       - '.:/code'
       - static_volume:/code/staticfiles
