--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,8 @@ services:
              python manage.py migrate --noinput &&
              python manage.py migrate --noinput &&
              gunicorn core.wsgi:application --bind 0.0.0.0:8100"
+    ports:
+      - "8100:8100"
     volumes:
       - '.:/code'
       - static_volume:/code/staticfiles
