--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,8 +14,9 @@ services:
     build: .
     command: >
       sh -c "python manage.py wait_for_db &&
+             python manage.py collectstatic --noinput &&
              python manage.py migrate --noinput &&
-             python manage.py migrate --noinput &&
+             python manage.py loaddata prizes --noinput &&
              gunicorn core.wsgi:application --bind 0.0.0.0:8100"
     ports:
       - "8100:8100"
@@ -39,7 +40,7 @@ services:
       - '80:80'
       - '443:443'
     volumes:
-      - ./nginx/conf.d:/etc/nginx/conf.d
+      - ./nginx:/etc/nginx/conf.d
       - static_volume:/code/static
       - ./certbot/conf:/etc/letsencrypt
       - ./certbot/www:/var/www/certbot
