--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       sh -c "python manage.py wait_for_db &&
              python manage.py collectstatic --noinput &&
              python manage.py migrate --noinput &&
-             python manage.py loaddata prizes --noinput &&
+             python manage.py loaddata prizes &&
              gunicorn core.wsgi:application --bind 0.0.0.0:8100"
     ports:
       - "8100:8100"
