--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,7 @@ services:
       - '80:80'
       - '443:443'
     volumes:
-      - ./nginx/default.conf:/etc/nginx/nginx.conf
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
       - static_volume:/code/static
       - ./certbot/conf:/etc/letsencrypt
       - ./certbot/www:/var/www/certbot
