--- a/nginx/conf/default.conf
+++ b/nginx/conf/default.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name voucherslot.site www.voucherslot.site;
+    server_name 162.0.223.101 voucherslot.site www.voucherslot.site;
 
     location /static/ {
         alias /code/staticfiles/;
