--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
       - "8100:8100"
     volumes:
       - '.:/code'
-      - static_volume:/code/staticfiles
+      - static_volume:/code/static
     env_file:
       - .env
     environment:
@@ -42,7 +42,7 @@ services:
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./nginx/conf:/etc/nginx/conf.d
-      - static_volume:/code/staticfiles
+      - static_volume:/code/static
       # - ./certbot/conf:/etc/letsencrypt
       # - ./certbot/www:/var/www/certbot
     depends_on:
