--- a/nginx/conf/default.conf
+++ b/nginx/conf/default.conf
@@ -3,7 +3,7 @@ server {
     server_name 162.0.223.101 voucherslot.site www.voucherslot.site;
 
     location /static/ {
-        alias /code/staticfiles/;
+        alias /code/static/;
     }
 
     location / {
