--- a/nginx/conf/default.conf
+++ b/nginx/conf/default.conf
@@ -2,9 +2,31 @@ server {
     listen 80;
     server_name 162.0.223.101 voucherslot.site www.voucherslot.site;
 
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+server {
+    listen 443 ssl;
+    server_name voucherslot.site www.voucherslot.site;
+
+    ssl_certificate /etc/letsencrypt/live/voucherslot.site/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/voucherslot.site/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
+    location = /favicon.ico { access_log off; log_not_found off; }
     location /static/ {
         alias /code/static/;
     }
+    # location /media/ {
+    #     alias /code/media/;
+    # }
 
     location / {
         proxy_pass http://fruit_machine:8100;
@@ -14,3 +36,19 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
+# server {
+#     listen 80;
+#     server_name 162.0.223.101 voucherslot.site www.voucherslot.site;
+
+#     location /static/ {
+#         alias /code/static/;
+#     }
+
+#     location / {
+#         proxy_pass http://fruit_machine:8100;
+#         proxy_set_header Host $host;
+#         proxy_set_header X-Real-IP $remote_addr;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header X-Forwarded-Proto $scheme;
+#     }
+# }
