--- a/nginx/conf/default.conf
+++ b/nginx/conf/default.conf
@@ -1,10 +1,6 @@
 server {
     listen 80;
-    server_name 162.0.223.101 voucherslot.site www.voucherslot.site;
-
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-    }
+    server_name voucherslot.site www.voucherslot.site;
 
     location / {
         return 301 https://$host$request_uri;
@@ -12,30 +8,26 @@ server {
 }
 
 server {
-    listen 443 ssl;
+    listen 443 ssl; # Managed automatically by nginx-certbot
     server_name voucherslot.site www.voucherslot.site;
-
-    ssl_certificate /etc/letsencrypt/live/voucherslot.site/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/voucherslot.site/privkey.pem;
-    include /etc/letsencrypt/options-ssl-nginx.conf;
-    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     location = /favicon.ico { access_log off; log_not_found off; }
     location /static/ {
-        alias /code/static/;
+        alias /fruit_machine/static/;
     }
-    # location /media/ {
-    #     alias /code/media/;
-    # }
+    location /media/ {
+        alias /fruit_machine/media/;
+    }
 
     location / {
-        proxy_pass http://fruit_machine:8100;
+        proxy_pass http://fruit_machine:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
+
 # server {
 #     listen 80;
 #     server_name 162.0.223.101 voucherslot.site www.voucherslot.site;
