--- a/nginx/conf/default.conf
+++ b/nginx/conf/default.conf
@@ -13,11 +13,9 @@ server {
 
     location = /favicon.ico { access_log off; log_not_found off; }
     location /static/ {
-        alias /fruit_machine/static/;
+        alias /code/static/;
     }
-    location /media/ {
-        alias /fruit_machine/media/;
-    }
+  
 
     location / {
         proxy_pass http://fruit_machine:8000;
