--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,52 +34,19 @@ services:
     depends_on:
       - db
 
-  # nginx:
-  #   image: jonasal/nginx-certbot:latest
-  #   ports:
-  #     - '80:80'
-  #     - '443:443'
-  #   volumes:
-  #     - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-  #     - ./nginx/conf:/etc/nginx/conf.d
-  #     - static_volume:/code/static
-  #     - certbot-etc:/etc/letsencrypt
-  #     - certbot-var:/var/lib/letsencrypt
-  #     - dh-param:/etc/ssl/certs
-  #   environment:
-  #     - CERTBOT_EMAIL=your_email@example.com
-  #   depends_on:
-  #     - fruit_machine
-
   nginx:
-    image: jonasal/nginx-certbot:latest
-    restart: unless-stopped
-    env_file:
-      - .env
+    image: nginx:alpine
     ports:
-      - 80:80
-      - 443:443
+      - '80:80'
+      - '443:443'
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./nginx/conf:/etc/nginx/conf.d
       - static_volume:/code/static
-      - nginx_secrets:/etc/letsencrypt
+      # - ./certbot/conf:/etc/letsencrypt
+      # - ./certbot/www:/var/www/certbot
     depends_on:
       - fruit_machine
-
-  # nginx:
-  #   image: nginx:alpine
-  #   ports:
-  #     - '80:80'
-  #     - '443:443'
-  #   volumes:
-  #     - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-  #     - ./nginx/conf:/etc/nginx/conf.d
-  #     - static_volume:/code/static
-  #     - ./certbot/conf:/etc/letsencrypt
-  #     - ./certbot/www:/var/www/certbot
-  #   depends_on:
-  #     - fruit_machine
 
   # certbot:
   #   image: certbot/certbot
@@ -90,11 +57,6 @@ services:
   #   depends_on:
   #     - nginx
 
-# volumes:
-#   postgres_data:
-#   static_volume:
-
 volumes:
   postgres_data:
   static_volume:
-  nginx_secrets:
