--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,9 @@ services:
     build: .
     command: >
       sh -c "python manage.py wait_for_db &&
-             python manage.py collectstatic --noinput &&
+             python manage.py makemigrations --noinput &&
              python manage.py migrate --noinput &&
+             python manage.py collectstatic --noinput &&
              python manage.py loaddata prizes &&
              gunicorn core.wsgi:application --bind 0.0.0.0:8100"
     ports:
