--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
              python manage.py makemigrations --noinput &&
              python manage.py migrate --noinput &&
              python manage.py collectstatic --noinput &&
+             python manage.py feeddb &&
              python manage.py loaddata prizes &&
              gunicorn core.wsgi:application --bind 0.0.0.0:8100"
     ports:
