--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,9 @@ services:
   fruit_machine:
     build: .
     command: >
-      sh -c "python manage.py wait_for_db &&
+      sh -c "
+             pyclean . &&
+             python manage.py wait_for_db &&
              python manage.py makemigrations --noinput &&
              python manage.py migrate --noinput &&
              python manage.py collectstatic --noinput &&
